--- a/common/common.scss
+++ b/common/common.scss
@@ -31,3 +31,12 @@ div.list-container, .topic-post .topic-avatar, table tbody {
   margin-top: 0;
   padding-top: 20px;
 }
+.topic-map {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+.list-controls {
+  margin-bottom: 0;
+}
+
