--- a/common/common.scss
+++ b/common/common.scss
@@ -39,4 +39,7 @@ div.list-container, .topic-post .topic-avatar, table tbody {
 .list-controls {
   margin-bottom: 0;
 }
+thead, .table-heading {
+  background: linear-gradient(to bottom, #f9f9f9 0%, #f0f0f0 100%);
+}
 
